# BhaashikLowsResLangTrans

./: .env.example  .gitattributes  .gitignore  API_KEYS_SETUP.md  CLAUDE.md  CONVERSATION_LOG.md  CORPUS_TRANSLATION.md  CORPUS_TRANSLATION_FEATURE (DESKTOP-AS46426's conflicted copy 2026-01-01).md  FULL_TRANSLATION_GUIDE.md  GPT-4O-MINI-FIXED.md  HPC-TROUBLESHOOTING.md  Hindi_Translation_Complete_Guide (DESKTOP-AS46426's conflicted copy 2026-01-01).md  Initial intstructions (a log of a long conversation) for Claude Code.md  MANIFEST.md  OPENAI_TRANSLATION_USAGE.md  PROJECT_SUMMARY.md  PROVIDERS.md  QUICK_REFERENCE.md  QUICK_START_OPENAI.md  README.md  SETUP-HPC.md  SETUP.md  TRANSFER_CHECKLIST.md  TRANSFER_SUMMARY.md  TRANSLATION_PACKAGE_DESIGN.md  UNIVERSAL_TRANSLATE_PACKAGE_SUMMARY.md  USAGE.md  environment (DESKTOP-AS46426's conflicted copy 2026-01-01).yml  environment-hpc.yml  environment.yml  pyproject.toml  quickstart (DESKTOP-AS46426's conflicted copy 2026-01-01).sh  requirements.txt
.claude/: settings.local (DESKTOP-AS46426's conflicted copy 2026-01-01).json  settings.local.json
claude-nlprnd-prev-conv-01-12-2025/: 6c9fc226-8859-4f4f-8f96-f23f410b09a7.jsonl  908b24e6-987d-4327-9ebb-1e47bcece8fb.jsonl  agent-02c41097.jsonl  agent-0e7836cf.jsonl  agent-592595e5.jsonl  agent-852e7e51.jsonl  agent-af4c352a.jsonl  agent-b170b18f.jsonl  e0ec7d59-a602-4ab1-976e-70475230a6b3.jsonl
config/: config.yaml
docs/: ADVANCED_FEATURES_DESIGN.md  API_COMPARISON.md  DATA_SOURCES.md  LLM_AGNOSTIC_FRAMEWORK.md  MT_TRAINING_INTEGRATION.md  OPENAI_PROMPT_CACHING_GUIDE.md  PROMPT_CACHING_GUIDE.md
examples/: example_1_basic_translation.py  example_2_hindi_pivot.py  example_3_tiered_strategy.py  example_4_quality_assessment.py  example_5_corpus_translation.py  translate_with_caching.py  translate_with_openai_caching.py
open-ai-translation-files/: MANIFEST.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  create_sample_corpus.sh  requirements.txt  setup_wsl2.sh  translate_domain_corpus.py
(+6749 files in other folders)
